@@ -1,18 +1,18 @@
-# $NetBSD: Makefile,v 1.2 2018/07/28 14:40:48 brook Exp $
+# $NetBSD: Makefile,v 1.3 2019/07/31 19:23:25 brook Exp $
 
-CATEGORIES=	math
+CATEGORIES=	math R
 
 MAINTAINER=	minskim@NetBSD.org
 HOMEPAGE=	http://www.math.mcmaster.ca/bolker/emdbook/
 COMMENT=	Support functions and data for "Ecological Models and Data"
-LICENSE=	gnu-gpl-v2
-
-DEPENDS+=	R-bbmle-[0-9]*:../../math/R-bbmle
-DEPENDS+=	R-coda-[0-9]*:../../math/R-coda
-DEPENDS+=	R-plyr-[0-9]*:../../math/R-plyr
+LICENSE=	gnu-gpl-v1 OR gnu-gpl-v2 OR gnu-gpl-v3
 
 R_PKGNAME=	emdbook
-R_PKGVER=	1.3.9
+R_PKGVER=	1.3.11
+
+DEPENDS+=	R-bbmle>=1.0.20:../../math/R-bbmle
+DEPENDS+=	R-coda>=0.19.3:../../math/R-coda
+DEPENDS+=	R-plyr>=1.8.4:../../math/R-plyr
 
 USE_LANGUAGES=	# none
 
