@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2019,v 1.3169 2019/07/31 19:21:32 brook Exp $
+$NetBSD: CHANGES-2019,v 1.3170 2019/07/31 19:23:25 brook Exp $
 
 Changes to the packages collection and infrastructure in 2019:
 
@@ -5126,3 +5126,4 @@ Changes to the packages collection and infrastructure in 2019:
 	Updated math/R-coda to 0.19.3 [brook 2019-07-31]
 	Updated math/R-combinat to 0.0.8 [brook 2019-07-31]
 	Updated math/R-e1071 to 1.7.2 [brook 2019-07-31]
+	Updated math/R-emdbook to 1.3.11 [brook 2019-07-31]
